--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,6 +19,16 @@ h3 {
   margin: 1rem 0;
 }
 
+h1 {
+  font-size: 1.8rem;
+  padding: 1rem 0;
+}
+
+h2 {
+  font-size: 1.4rem;
+  padding: 0.5rem 0;
+}
+
 .rating span{
   margin: 0.1rem;
 }
